[package]
name = "box_client"
version = "0.1.0"
authors = ["Harry Stern <hcs@meow.sh>"]
workspace = ".."

[dependencies]
specs = { version = "0.8", git = "https://github.com/boustrophedon/specs", branch = "message_passing" }
time = "0.1"
libbox = { version = "0.1.0", features = ["client"], path = "../libbox" }
