[package]
name = "libbox"
version = "0.1.0"
authors = ["Harry Stern <hcs@meow.sh>"]
workspace = ".."

[features]
client = ["glium"]
server = []

[dependencies]
nalgebra = "0.9" # ncollide 0.10 uses nalgebra 0.9 so I have to use it for the types to match up
ncollide = "0.10"
specs = { version = "0.8", git = "https://github.com/boustrophedon/specs", branch = "message_passing" }
time = "0.1"
glium = { version = "0.15.0", optional = true }
